tests/ui/issues/issue-7044.rs
static X: isize = 0;
struct X; //~ ERROR the name `X` is defined multiple times

fn main() {}
